--- a/src/tex/1-introduction.tex
+++ b/src/tex/1-introduction.tex
@@ -8,9 +8,9 @@ What's more, all of the privacy-related DApps on the Ethereum cannot comply with
 Several methodologies have been proposed to address the privacy problem. Monero and Zcash implemented private transaction by ring signature~\cite{van2013cryptonote} and zk-SNARK~\cite{sasson2014zerocash} technology, but their methods can only provide privacy for cryptocurrencies and are hard to be extended to general-purpose smart contracts. MPC (Multi-Party Computing) can theoretically run arbitrary programs without revealing intermediate states to the participants, with the expense of a performance overhead of $10^6$ times~\cite{cheng2019ekiden}, which makes it impractical for real world use cases.
 
 % Currently, pure software solutions are not viable.
-A new approach is to utilize special hardware, i.e., Trusted Execution Environment (TEE)~\cite{teewiki} . TEE is a special area in some processors that provides a higher level of security including isolated execution, code integration, and state confidentiality. Naive TEE as a computing platform has several shortages, such as the lack of a reliable time source and availability guarantee.
+A new approach is to utilize special hardware, i.e., Trusted Execution Environment (TEE)~\cite{teewiki}. TEE is a special area in some processors that provides a higher level of security including isolated execution, code integration, and state confidentiality. Naive TEE as a computing platform has several shortages, such as the lack of a reliable time source and availability guarantee.
 
-Ekiden~\cite{cheng2019ekiden} fixed these problems by introducing a TEE-blockchain hybrid architecture and implemented high performance confidential smart contract platform. However, contracts in Ekiden are isolated, which means the contracts cannot interoperate with each other, let alone external blockchains. Interoperability is a keystone of modern smart contracts. For example, 8 of the top 10 contracts in Ethereum, the largest smart contract platform in the world, rely on functions invocations or money transferring to at least one other contract. Without interoperability, contracts cannot read information or call functions from other smart contracts. What's more, the use of self-defined tokens, one of the most common cases in smart contract usages, is unachievable if all the contracts cannot access the token contract.
+Ekiden~\cite{cheng2019ekiden} fixed these problems by introducing a TEE-blockchain hybrid architecture and implemented a high performance confidential smart contract platform. However, contracts in Ekiden are isolated, which means the contracts cannot interoperate with each other, let alone external blockchains. Interoperability is a keystone of modern smart contracts. For example, 8 of the top 10 contracts in Ethereum, the largest smart contract platform in the world, rely on functions invocations or money transferring to at least one other contract. Without interoperability, contracts cannot read information or call functions from other smart contracts. What's more, the use of self-defined tokens, one of the most common cases in smart contract usages, is unachievable if all the contracts cannot access the token contract.
 
 % May not include the stats in the whitepaper?
 % Top 10 most used contracts in ETH, 2019-10-04, 7 days accumulated:
